fix: text align tag h2

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -19,6 +19,10 @@
     margin-bottom: 7.5%;
     max-width:     460px;
   }
+  h2 {
+    text-align:    left;
+    margin-bottom: 2rem;
+  }
   .btn {
     padding: 22px 12px;
   }
